static/scss/_header.scss
// Header text

#site-title {
  display: block;
  font-family: $font-family-sans-serif;
  margin: 20px 0 -22px;
  position: relative;
  z-index: 999;

  @media (max-width: $screen-xs-max) {
    margin-bottom: 0;
  }

  a {
    display: inline-block;

    &:hover,
    &:focus {
      text-decoration: none;
    }
  }
}

.site-title-primary,
.site-title-secondary {
  clear: both;
  display: block;
  float: left;
  line-height: .9;
}

.site-title-primary {
  @include no-font-smoothing();
  color: $text-color;
  font-size: 30px;
  font-weight: 300;
  text-transform: uppercase;

  @media (max-width: $screen-sm-max) {
    font-size: 16px;
  }

  @media (max-width: $screen-xs-max) {
    font-size: 13px;
  }
}

.site-title-secondary {
  color: $ucf-gold;
  font-size: 75px;
  font-weight: 600;
  letter-spacing: -.07em;
  line-height: 1;

  @media (max-width: $screen-sm-max) {
    font-size: 60px;
  }

  @media (max-width: $screen-xs-max) {
    font-size: 36px;
  }
}


// Header menu

#header-menu {
  font-family: $font-family-serif, serif;
  font-size: 17px;
  line-height: 1.4;
  margin-top: 20px;
  text-align: center;

  @media (max-width: $screen-sm-max) {
    padding: 0 20px;
  }

  li {
    @media (max-width: $screen-sm-max) {
      padding: 0;
    }
  }

  a {
    color: #000;
    display: block;
    padding: 5px 7px;

    @media (max-width: $screen-sm-max) {
      font-size: 14.25px;
    }

    &:hover,
    &:focus {
      background-color: #000;
      color: $ucf-gold;
      text-decoration: none;
    }
  }

  .last a {
    background-color: #fc0;
    border-radius: 4px;
    font-family: Verdana, Geneva, sans-serif;
    font-size: 14px;
    font-weight: 500;
    padding: 5px 12px;
    vertical-align: middle;
    white-space: nowrap;

    @media (max-width: $screen-sm-max) {
      font-size: 11px;
    }

    &:hover,
    &:focus {
      background-color: #000;
      color: #fff;
    }
  }
}

#site-nav-xs {
  border-radius: 4px;
  margin: 10px 15px;

  .navbar-brand {
    color: #fff;
    font-family: $font-family-serif, serif;
    font-size: 20px;
  }
}

#header-menu-xs {
  font-family: $font-family-serif, serif;

  a {
    font-size: 14px;
    font-weight: bold;
  }

  .last {
    text-align: center;

    a {
      background-color: #fc0;
      border-radius: 4px;
      color: #000;
      font-family: Verdana, Geneva, sans-serif;
      font-size: 11px;
      margin: 10px 15px;
      padding: 6px 15px;
    }
  }
}

